<resources>
    <string name="app_name">Split</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="scan">Scan</string>
    <string name="timelist">Time List</string>
    <string name="name">Account Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="title_activity_nfc">ActivityNFC</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="timeLog">Time Log</string>
    <string name="sync">Sync to Server</string>
    <string name="writeNFC">Write NFC</string>
    <string name="page_title">Split</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <string name="text_username">USERNAME</string>
    <string name="user_name">NAME</string>

    <string name="image_description">Profile Image</string>
    <string name="info">Information</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="active_scan">Actively Scan For NFC Tags?</string>
    <string name="write_nfc">WRITE NFC</string>
    <string name="bib">Bib Number</string>
    <string name="confirm">Confirm</string>
    <string name="plance_nfc">Approach an NFC tag</string>
    <string name="nfclogo">NFCLOGO</string>
    <string name="edit_time">Edit Time</string>
    <string name="token">Token</string>
    <string name="add_token">Scan Token</string>
    <string name="erase">Erase</string>
    <string name="ip">IP</string>
    <string name="edit_date">Edit Date</string>
    <string name="full_name">Full Name</string>
    <string name="paste_token">Paste Token</string>
    <string name="or">-OR-</string>
    <string name="set_identifiers">Set Identifiers</string>
    <string name="edit_account">Edit Account</string>
    <string name="device_information">Device Information</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="search">Search</string>
    <string name="search_bib">Search Bib</string>
    <string name="sync_write_events">Sync</string>
    <string name="clear">Clear</string>
    <string name="ip_address">IP Address</string>

    <string-array name="action">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

</resources>