<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-197dp"
        tools:layout_editor_absoluteY="-306dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="121dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_account_circle_24" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_information"/>

            <androidx.cardview.widget.CardView
                app:cardElevation="1dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/label_token"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/token"/>

                    <TextView
                        android:id="@+id/token"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text=""/>

                    <EditText
                        android:id="@+id/pasteTokenField"
                        android:layout_width="295dp"
                        android:layout_height="53dp"
                        android:hint="@string/paste_token"/>

                    <Button
                        android:id="@+id/pasteTokenBtn"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/save"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"/>

                    <Button
                        android:id="@+id/addToken"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/add_token"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="1dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_identifiers"/>

                    <TextView
                        android:id="@+id/identifierText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <EditText
                        android:id="@+id/identifierField"
                        android:layout_width="295dp"
                        android:layout_height="53dp"/>

                    <Button
                        android:id="@+id/saveIdentifierBtn"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/save"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_account"/>

            <androidx.cardview.widget.CardView
                app:cardElevation="1dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        app:layout_constraintBottom_toTopOf="@+id/profile_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.165"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        app:layout_constraintVertical_bias="0.288" />

                    <EditText
                        android:id="@+id/profile_name"
                        android:layout_width="295dp"
                        android:layout_height="53dp"
                        android:ems="10"
                        android:hint="@string/full_name"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        app:layout_constraintBottom_toTopOf="@+id/saveNameBtn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/saveNameBtn"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardElevation="1dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/edit_credentials"/>

                    <EditText
                        android:id="@+id/profile_username"
                        android:layout_width="295dp"
                        android:layout_height="53dp"
                        android:layout_marginBottom="12dp"
                        android:ems="10"
                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                    <EditText
                        android:id="@+id/profile_password"
                        android:layout_width="295dp"
                        android:layout_height="53dp"
                        android:layout_marginBottom="16dp"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/profile_confirmPassword"
                        android:layout_width="295dp"
                        android:layout_height="53dp"
                        android:layout_marginBottom="20dp"
                        android:ems="10"
                        android:hint="@string/confirmPassword"
                        android:inputType="textPassword" />


                    <Button
                        android:id="@+id/saveAccountBtn"
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:text="@string/save" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>