<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteFragment">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_above="@+id/writeBottomPanel">

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/writeNFCtxt"
                    android:layout_width="153dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/write_nfc"
                    android:textAlignment="center"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/bibInput"
                    android:layout_width="240dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/bib"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/writeNFCbtn"
                    android:layout_width="164dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/confirm"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/writeSearchField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:hint="@string/search_bib" />

                    <Button
                        android:id="@+id/writeSearchBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search" />


                </LinearLayout>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/writeBibRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/writeBottomPanel"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/writeEraseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/erase"
            android:textColor="@color/red"
            android:background="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/writeSyncBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/sync_write_events"/>

    </LinearLayout>

</RelativeLayout>